[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Instruments/Bass.png" type="Texture" id=1]
[ext_resource path="res://Scenes/NoteA2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/BassAttack.gd" type="Script" id=3]



[node name="BassAttack" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="BassReference" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Note3" parent="." instance=ExtResource( 2 )]
position = Vector2( -260.412, 345.719 )

[node name="Note1" parent="." instance=ExtResource( 2 )]
position = Vector2( -240.207, -74.0824 )

[node name="Note2" parent="." instance=ExtResource( 2 )]
position = Vector2( -309.8, 130.206 )

[node name="Note4" parent="." instance=ExtResource( 2 )]
position = Vector2( 255.922, 341.229 )

[node name="Note5" parent="." instance=ExtResource( 2 )]
position = Vector2( 289.595, 101.022 )

[node name="Note6" parent="." instance=ExtResource( 2 )]
position = Vector2( 226.738, -107.756 )
